Fix left ethos h2 spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,11 @@ header a{
     max-width: 290px;
 }
 
+#left-ethos h2{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 #center-ethos{
     width: 33%;
     margin-top: -80px;
